--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.13"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
