--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.13"
-  },
-  "devDependencies": {
+    "mongoose": "^5.13.13",
     "dotenv": "^16.0.1"
   }
 }
